# beep-boop

./: .gitignore  Cargo.toml  README.md
src/: error.rs  main.rs  synth.rs  synth_ui.rs
src/synth/: envelope.rs  oscillator.rs  waves.rs
src/synth_ui/: constants.rs  layout.rs  model.rs  widgets.rs
