[package]
name = "beep-boop"
version = "0.1.0"
authors = ["GorgeousMooseNipple <orang768@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.12"
portaudio-rs = "0.3.2"
rand = "0.7.3"
druid = "0.7.0"
